--- a/Lógica e algoritmos/07operadorTernario.html
+++ b/Lógica e algoritmos/07operadorTernario.html
@@ -11,7 +11,7 @@
 //Obter a idade
 var idade = prompt("Informe a idade")
 
-//Operador Ternário
+//Operador Ternário para teste
 alert(idade >= 18 ? "Maior de idade" : "Menor de idade")
 
 
