--- a/Lógica e algoritmos/exercicio03while do while.html
+++ b/Lógica e algoritmos/exercicio03while do while.html
@@ -8,10 +8,25 @@
 
   <script>
 
+// Obter um número
+var n1 = parseInt(prompt("Informe um número"))
+var n2 = parseInt(prompt("Informe outro número"))
 
+// Número mínimo
+var minimo = numero - 6
 
+// Número máximo
+var maximo = numero + 6
 
-  </script>
+// Laço de repetição
+
+while(minimo <= maximo){
+document.write(minimo + "<br>")
+minimo++
+}
+
+</script>
+
 </head>
 <body>
   
