--- a/Lógica e algoritmos/exercicio05while do-while.html
+++ b/Lógica e algoritmos/exercicio05while do-while.html
@@ -69,7 +69,7 @@
         document.write("Positivos: "+positivos + "<br>")
         document.write("Negativos: "+negativos + "<br>")
         document.write("Pares: "+pares + "<br>")
-        document.write("Ímpares': "+impares)
+        document.write("Ímpares: "+impares)
         
 
 
