--- a/Lógica e algoritmos/exerciciosmistos02.html
+++ b/Lógica e algoritmos/exerciciosmistos02.html
@@ -6,17 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <script>
+<script>
 
-// Obter um número
-var numero = prompt("Informe um número")
 
-// Operador Ternário
-alert(numero % 2 == 0 ? "Par" : "Ímpar")
+var ano = prompt("Informe o ano")
 
-// Mod funciona com números pares e ímpares,ano bissexto, etc...
+// bissexto ou não
+  if(ano % 4 == 0){
+    alert("O ano informado é bissexto")
+  }else{
+    alert("ano não é bissexto")
+  }
 
-  </script>
+</script>
+
+
+
 </head>
 <body>
   
